--- a/front-end/src/app/results/quiz-attempt/quiz-attempt.component.html
+++ b/front-end/src/app/results/quiz-attempt/quiz-attempt.component.html
@@ -4,7 +4,7 @@
         <li *ngIf="attempt.timeOuts>0"> Pertes d'attention ({{attempt.timeOuts}})</li>
         <li *ngIf="attempt.wrongAnswers && attempt.wrongAnswers.length>0; else perfect"> {{attempt.wrongAnswers.length}} faute(s)</li>
     </ul>
-    <h6>{{attempt.date | date}}</h6>
+    <h6>{{attempt.date | date : 'dd/MM/yyyy'}}</h6>
 </div>
 
 <ng-template #perfect>
