--- a/front-end/src/app/game/answer-list-widget/answer-list-widget.component.scss
+++ b/front-end/src/app/game/answer-list-widget/answer-list-widget.component.scss
@@ -29,7 +29,8 @@
     transition: transform 1.8s ease-in-out, opacity 1.8s ease-in-out;
 }*/
 .shazamButton {
-    background-color: #2693FF;
+    background-color: rgb(38, 139, 255);//default
+    //background-color: rgb(127, 74, 250);
     border-radius: 75px;
     height: 50px;
     line-height: 50px;//to vertically center
@@ -44,11 +45,3 @@
 .shazamButton:hover {
     cursor: pointer;
 }
-/*.stateOne {
-    opacity: 1;
-    transform: scale(1, 1);
-}
-.stateTwo {
-    opacity: .5;
-    transform: scale(1.3, 1.3);
-}*/
