Ajout du filtrage de quiz par theme

--- a/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
@@ -1,9 +1,25 @@
 <button class="button-card" routerLink= "/players">Retour</button>
 <br>
+
+<form [formGroup]="themeForm">
+    <select name="Thème" id="selectTheme" [formControlName]="'theme'">
+        <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
+          {{current_theme}}
+        </option>
+    </select>
+</form>
+
 <div class="quiz-list">
-    <div *ngFor="let quiz of quizList">
-        <button id="bouton" *ngIf="quizService.isValid(quiz)" class="card button-card fixed-container"  routerLink= "./game/{{quiz.id}}">
-            <app-quiz  [quiz]="quiz"></app-quiz>
-        </button>
+
+    <div *ngIf="quizList && filteredQuizList().length!==0; else noQuizFound">
+        <div *ngFor="let quiz of filteredQuizList()">
+            <button id="bouton" class="card button-card fixed-container"  routerLink= "./game/{{quiz.id}}">
+                <app-quiz  [quiz]="quiz"></app-quiz>
+            </button>
+        </div>
     </div>
 </div>
+
+<ng-template #noQuizFound let-modal>
+    <div class="center" id="redCenteredMsg"> Aucun quiz trouvé </div>
+</ng-template>
