--- a/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.scss
@@ -22,3 +22,9 @@
   align-items: center;
   justify-content: center;
 }
+
+#redCenteredMsg {
+  color: red;
+  text-align: center;
+  font-size: 3em;
+}
