--- a/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
@@ -2,6 +2,13 @@
 <button class="button-card" routerLink= "/">Home</button>
 <br>
 
+<form [formGroup]="themeForm">
+    <select name="Thème" id="selectTheme" [formControlName]="'theme'">
+        <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
+          {{current_theme}}
+        </option>
+    </select>
+</form>
 
 <div class="newQuiz">
     <button type="button" class="button-card" (click)="modalService.open(quizFormModal)"> 
@@ -10,18 +17,25 @@
 </div>
 
 <div class="quiz-list">
-    <div class="card quiz fixed-container" *ngFor="let quiz of quizList">
-        <div class = "invalid" *ngIf = "!quizService.isValid(quiz)">
-            Incomplet
+    <div *ngIf="quizList && filteredQuizList().length!==0; else noQuizFound">
+        <div *ngFor="let quiz of filteredQuizList()">
+            <div class="card quiz fixed-container">
+                <div class = "invalid" *ngIf = "!quizService.isValid(quiz)">
+                    Incomplet
+                </div>
+                <button class="button-card delete" (click)="deleteQuiz(quiz)">
+                    <i class="fas fa-times"></i></button>
+                <button class="quiz-card" routerLink= "./{{quiz.id}}">
+                    <app-quiz [quiz]="quiz" (quizDeleted) = "deleteQuiz($event)"></app-quiz>
+                </button>        
+            </div>
         </div>
-        <button class="button-card delete" (click)="deleteQuiz(quiz)">
-            <i class="fas fa-times"></i></button>
-        <button class="quiz-card" routerLink= "./{{quiz.id}}">
-            <app-quiz [quiz]="quiz" (quizDeleted) = "deleteQuiz($event)"></app-quiz>
-        </button>
     </div>
 </div>
 
+<ng-template #noQuizFound let-modal>
+    <div class="center" id="redCenteredMsg"> Aucun quiz trouvé </div>
+</ng-template>
 
 <ng-template #quizFormModal let-modal>
     <div class="modal-header">
