--- a/front-end/src/app/game/answer-list-widget/answer-list-widget.component.html
+++ b/front-end/src/app/game/answer-list-widget/answer-list-widget.component.html
@@ -11,9 +11,8 @@
 <div *ngIf="display === SHOW_RIGHT_ANSWER ">
     <app-right-answer [answers]=answers></app-right-answer>
     <div *ngIf="displayNextButton">
-        <div class="shazamButton" [@scale]='scale' (click)="nextQuestion()">Suivant 
+        <div class="shazamButton" [@shazam]='zoom' (click)="nextQuestion()">Suivant 
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </div>
     </div>
 </div>
-<!--<i class="fa fa-arrow-left" aria-hidden="true">back button left hand corner</i>-->
