--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
 
-<app-header></app-header>
+<!--<app-header></app-header>-->
 <div class="main-content">
     <router-outlet></router-outlet> <!-- treatment goes through this --> 
 </div>
