--- a/front-end/src/app/core/players/player-view/player-view.component.html
+++ b/front-end/src/app/core/players/player-view/player-view.component.html
@@ -1,4 +1,6 @@
-<button class="button-card" routerLink= "..">Retour</button>
+<button class="button-card" routerLink= "..">
+  <i class="fa fa-arrow-left" aria-hidden="true"></i>
+</button>
 <button class="button-card" routerLink= "/">Home</button>
 
 <div *ngIf="player && playerPhoto.url" class = "player">
