--- a/front-end/src/app/game/runner/runner.component.scss
+++ b/front-end/src/app/game/runner/runner.component.scss
@@ -1,10 +1,11 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
 @import '../../../styles/layout.scss';
+@import '../../../styles/common.scss';
 
 .box{
-    @extend .vertical-layout;
-    @extend .center;
+    /*@extend .vertical-layout;
+    @extend .center;*/
     width: fit-content;
     margin: auto;
     padding: 10px;
