--- a/front-end/src/app/header/header.component.scss
+++ b/front-end/src/app/header/header.component.scss
@@ -9,7 +9,15 @@
 }
 
 .header {
-  background: $magenta;
+  float: center;
+  width: 100%;
+  //background: $magenta;
+  //background-color: rgb(137, 2, 179);//$magenta;
+  background-color: rgb(151, 87, 255);//$magenta;
   padding: 0.5em;
+  text-align: center;
+  font-weight: bold;
+  position: fixed;
+  margin-top: -3rem;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
