--- a/front-end/src/app/start/screen-admin/screen-admin.component.html
+++ b/front-end/src/app/start/screen-admin/screen-admin.component.html
@@ -1,4 +1,6 @@
-<button class="button-card" routerLink= "/home">Retour</button>
+<button class="button-card" routerLink= "/home">
+    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+</button>
 <button class="button-card" routerLink= "/home">Home</button>
 
 <div class="buttons-duo center">
