--- a/front-end/src/app/gallery/gallery.component.scss
+++ b/front-end/src/app/gallery/gallery.component.scss
@@ -1,14 +1,14 @@
 @import '../../styles/images.scss';
-@import 'src/styles/layout.scss';
+@import '../../styles/layout.scss';
 @import '../../styles/card.scss';
+@import '../../styles/common.scss';
 
 .responsive-list {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-
-    align-items: center;
-    justify-content: center;
 }
 
 .frame-list{
@@ -16,12 +16,9 @@
     border-collapse: collapse;
 }
 
-.wide-button {
-    width: 100%;
-}
-
 .delete {
+    float: right;
     position: relative;
-    margin-left: auto;
-    margin-right: 36px;
+    //margin-left: 8rem;
+    padding: 0.3rem 0.4rem;
 }
