--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,4 +1,7 @@
+<app-header [title] = "headerTitle"></app-header>
+<div class="main">
 <div class="buttons-duo center">
-    <button class="button-card button-big" routerLink= "/login">Personnel</button>
-    <button class="button-card button-big" routerLink= "/players">Accueilli</button>
+    <div class="button-card button-big" routerLink= "/login">Personnel</div>
+    <div class="button-card button-big" routerLink= "/players">Accueilli</div>
+</div>
 </div>
