--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -1,5 +1,6 @@
-<button class="button-card" routerLink= "/">Retour</button>
-<button class="button-card" routerLink= "/">Home</button>
+<button class="button-card" routerLink= "/">
+    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+</button>
 <div class = "center">
     <form [formGroup]="loginForm">
         <input [formControlName]="'password'" type="password" placeholder="Entrez le mot de passe">
