--- a/front-end/src/app/start/screen-player/screen-player.component.html
+++ b/front-end/src/app/start/screen-player/screen-player.component.html
@@ -1,4 +1,10 @@
-<button class="button-card" routerLink= "/home">Retour</button>
-<button class="button-card" routerLink= "/home">Home</button>
-<!--<app-quiz-list-player></app-quiz-list-player>-->
+<app-header [title] = "headerTitle"></app-header>
+<div class="goback-button" routerLink= "/">
+    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+</div>
+<div class="home-button" routerLink= "/">
+    <i class="fa fa-home" aria-hidden="true"></i>
+</div>
+<div class="main">
 <app-player-list-player></app-player-list-player>
+</div>
