--- a/front-end/src/styles/layout.scss
+++ b/front-end/src/styles/layout.scss
@@ -1,9 +1,25 @@
 @import '../styles/variables.scss';
 
 .fixed-container {
-    height: 30%;
+    height: 25%;
     width: 25%;
-    min-width: 300px;
+    min-height: 7rem;
+    min-width: 7.1rem;//300px;
+    //border: dotted;
+    //border-radius: 2px;
+    //border-color: violet;
+    margin-bottom: 1rem;
+}
+
+.fixed-container-bigger {
+    height: 25%;
+    width: 25%;
+    min-height: 7rem;
+    min-width: 15rem;//7.1rem;//300px;
+    //border: dotted;
+    //border-radius: 2px;
+    //border-color: violet;
+    margin-bottom: 1rem;
 }
 
 .flex-compat {
@@ -58,12 +74,13 @@
 
 .center{
   margin: 0;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+
 .horizontal-center{
     margin-left: auto;
     margin-right: auto;
