--- a/front-end/src/app/gallery/gallery.component.scss
+++ b/front-end/src/app/gallery/gallery.component.scss
@@ -17,7 +17,7 @@
 }
 
 .delete {
-    float: right;
+    //float: right;
     position: relative;
     //margin-left: 8rem;
     padding: 0.3rem 0.4rem;
